--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -8,6 +8,9 @@
     = f.text_field :title
     = f.check_box :published
     Publish
+  %p 
+    = f.label :tag_names, "Tags"
+    = f.text_field :tag_names
   %p
     = f.label :body, "Body"
     %br/
