--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,35 +2,26 @@
 %html
   %head
     %title
-      Verivore - #{h(yield(:title) || "Loving Food and Tech")}
+      verivore - #{h(yield(:title) || "Loving Food and Tech")}
     = stylesheet_link_tag :all
     = javascript_include_tag :defaults
     = csrf_meta_tag
   %body
     #header
-      %ul
-        %li
-          %h3= link_to "Verivore", root_path
-        %li= link_to "Blog", posts_path
-        /%li= link_to "Canned Foods", canned_foods_path
+      .container_12
+        = link_to "verivore", root_path, :id => "title"
     .container_12
-      .grid_9
-        %p{:style => "color: green"}= flash[:notice]
-        = yield
-      .grid_3
-        %h3 About:
-        %p Your friendly neighbourhood geek and lover of physics, tech and food
-        #foodtree
-          %h3 Check out where I work:
-          = link_to "Foodtree", "http://foodtree.com"
-        .nav  
-          %h3 Find me elsewhere:
-          %ul
-            %li= link_to image_tag("mail.png"), "mailto:jonny@foodtree.com"
-            %li= link_to image_tag("facebook.png"), "http://facebook.com/jonnyjohannes"
-            %li= link_to image_tag("twitter.png"), "http://twitter.com/jonnyjohannes"
-            %li= link_to image_tag("linkedin.png"), "http://ca.linkedin.com/in/jonnyjohannes"
-          
+      #nav_bar
+        %ul
+          %li= link_to "weblog", root_path
+          %li= link_to "canned foods", canned_foods_path
+          /%li about
+      %p{:style => "color: green"}= flash[:notice]
+      = yield
+    
+      /#footer
+      /.container_12
+      /&copy; verivore
 
         
           
