Custom tagging solution and disqus commenting system integrated

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,14 +1,5 @@
 %head
   = auto_discovery_link_tag :atom, posts_path(:atom)
-  :javascript
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-17817043-2']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
     
 - title "weblog"
 
@@ -25,7 +16,16 @@
       = render :partial => @posts
       %p= will_paginate @posts, :class => "digg_pagination"
 
-.grid_3
+.grid_3.sidebar
   = render "shared/contact"
+  = render "shared/tags"
 
+:javascript
+  var disqus_shortname = 'verivore'; // required: replace example with your forum shortname
+  (function () {
+      var s = document.createElement('script'); s.async = true;
+      s.type = 'text/javascript';
+      s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+      (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+  }());
 
