--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,24 +4,36 @@
     %title
       verivore - #{h(yield(:title) || "Loving Food and Tech")}
     = stylesheet_link_tag :all
-    = javascript_include_tag :defaults
+    %script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" }
+    = javascript_include_tag :all
     = csrf_meta_tag
   %body
     #header
       .container_12
         = link_to "verivore", root_path, :id => "title"
     .container_12
+
+      
       #nav_bar
         %ul
           %li= link_to "weblog", root_path
-          %li= link_to "canned foods", canned_foods_path
-          /%li about
+          %li= link_to "canning calculator", canned_foods_path
+          /%li= link_to "about", about_path
       %p{:style => "color: green"}= flash[:notice]
       = yield
-    
-      /#footer
-      /.container_12
-      /&copy; verivore
 
+    #footer
+      .container_12
+        #copyright
+          &copy; verivore
+    :javascript
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-17817043-2']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
         
           
