--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,15 +1,3 @@
 %h1 Editing post
-- form_for(@post) do |f|
-  %p
-    = f.label :title
-    %br/
-    = f.text_field :title
-  %p
-    = f.label :body
-    %br/
-    = f.text_area :body
-  %p
-    = f.submit 'Update'
-= link_to 'Show', @post
-|
-= link_to 'Back', posts_path
+= render :partial => "post_form"
+
