--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,19 +1,4 @@
 - title "New Post"
 
 %h1= yield(:title)
-= form_for @post do |f|
-  %p
-    = f.label :title, "Title"
-    %br/
-    = f.text_field :title
-    = f.check_box :published
-    Publish
-  %p 
-    = f.label :tag_names, "Tags"
-    = f.text_field :tag_names
-  %p
-    = f.label :body, "Body"
-    %br/
-    = f.text_area :body
-  %p.button 
-    = f.submit
+= render :partial => "post_form"
