--- a/app/views/posts/_post_form.html.haml
+++ b/app/views/posts/_post_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @post do |f|
+= form_for @post, :html => { :multipart => true } do |f|
   %p
     = f.label :title, "Title"
     = f.text_field :title
@@ -10,6 +10,8 @@
   %p
     = f.label :body, "Body"
     %br/
+  %p
+    =f.file_field :image
     = f.text_area :body, :size => "120x30"
   %p.button 
     = f.submit
