--- a/app/views/canned_foods/index.html.haml
+++ b/app/views/canned_foods/index.html.haml
@@ -1,26 +1,30 @@
 - title "Canned Foods Calculator"
 
-%head
-  %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "content-type"}/
+= content_for :head do
   %script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript"}
+  %script{:src => "/javascripts/maps.js", :type => "text/javascript"}
   
-%body{:onload => "initialize()"}
+.grid_6
+  %h2= yield(:title)
 
-%h2= yield(:title)
+.grid_6
+  = form_tag canned_foods_path, :method => 'get' do 
+    = text_field_tag :search, params[:search]
+    = submit_tag "Search", :name => nil
+
+%div{:clear => 'both'}
 
 .grid_6.alpha
   - if admin?
     = link_to 'New Canned Food', new_canned_food_path
   
-  = form_tag canned_foods_path, :method => 'get' do 
-    %p
-      = text_field_tag :search, params[:search]
-      = submit_tag "Search", :name => nil
-
   %strong Page coming soon! Until then, enjoy the map on the right which locates where you are.
   
   = render :partial => @canned_foods
 
 .grid_6.omega
   #map_canvas
-    %script{:src => "/javascripts/maps.js", :type => "text/javascript"}
+  #elevation
+  -# :javascript
+  -#   $('#elevation').append('<p>Elevation: m</p>')
+    
