obfuscate email in sidebar

--- a/app/views/shared/_contact.html.haml
+++ b/app/views/shared/_contact.html.haml
@@ -2,7 +2,8 @@
   .contact_links
     %h3 find me elsewhere:
     %ul
-      %li= link_to image_tag("mail.png"), "mailto:jonny@foodtree.com", :target => "_blank"
+      %li
+        <a href='mailto&#58;j&#111;nn&#121;&#64;%66&#111;od%74&#114;%6&#53;e&#37;&#50;E%&#54;3o%6D' target='_blank'><img src='/images/mail.png'></a>
       %li= link_to image_tag("facebook.png"), "http://facebook.com/jonnyjohannes", :target => "_blank"
       %li= link_to image_tag("twitter.png"), "http://twitter.com/jonnyjohannes", :target => "_blank"
       %li= link_to image_tag("linkedin.png"), "http://ca.linkedin.com/in/jonnyjohannes", :target => "_blank"
