--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -11,7 +11,7 @@
     = link_to 'Destroy', post, :method => :delete, :confirm => "Are you sure?"
   .post_body
     = raw(RDiscount.new(coderay(post.body)).to_html)
-    %center= image_tag post.image.url(:large) unless post.image.url(:large) == "/images/small/missing.png"
+    %center= image_tag post.image.url(:large) unless post.image.url(:large) == "/images/large/missing.png"
   .tags
     %strong tags:
     - post.tags.each do |t|
