--- a/public/stylesheets/verivore.css
+++ b/public/stylesheets/verivore.css
@@ -123,6 +123,27 @@ p {
   float:right;
   margin: 0 -20px;
 }
+
+.canned_food h1{
+  font-size: 18px;
+  border-bottom: 1px solid #787878;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+}
+
+#food_search input{
+  margin-top: 5px;
+  font-size: 14px;
+  width: 140px;
+}
+
+.pressure ul {
+  list-style: none;
+}
+.pressure li {
+  float: left;
+  padding-right: 5px;
+}
 /* begin footer */
 
 #footer {
@@ -172,7 +193,7 @@ p {
   display: block;
   height: 77px;
   text-indent: -9999px;
-  margin: 10px 0 10px 46px;
+  margin: 20px 0px 0px 10px;
 }
 
 .pagination{
@@ -182,7 +203,7 @@ p {
 #map_canvas {
   height: 300px;
   width: 460px;
-  /*margin: 8px 0 20px;*/
+  margin: 10px 0 20px;
   border: 1px solid #000;
 }
 
