bash the usda pdfs a little less

--- a/app/views/canned_foods/index.html.haml
+++ b/app/views/canned_foods/index.html.haml
@@ -16,7 +16,7 @@
   
 .grid_6
   %p 
-    This 'canning calculator' is here to help you navigate (in my opinion) the useful but gross looking PDFs that the 
+    This 'canning calculator' is here to help you navigate the awesome but super inaccessible PDFs that the 
     = link_to "USDA has on canning information", "http://www.uga.edu/nchfp/publications/publications_usda.html"
     
     
