--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,17 +9,17 @@
     = yield :head
     
   %body{:onload => "initialize()"}
-    #header
+    %header#header
       .container_12
         = link_to "verivore", root_path, :id => "title"
-    
+        .grid_5.push_7
+          %ul
+            %li= link_to "weblog", root_path
+            %li= link_to "canning calculator", canned_foods_path
+            %li= link_to "gallery", gallery_path
+            %li= link_to "about", about_path
+          
     .container_12
-      #nav_bar
-        %ul
-          %li= link_to "weblog", root_path
-          %li= link_to "canning calculator", canned_foods_path
-          %li= link_to "gallery", gallery_path
-          %li= link_to "about", about_path
       %p{:style => "color: green"}= flash[:notice]
       = yield
 
