--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -7,7 +7,7 @@
       
       %h2{:style => "margin-bottom: 20px;"} Jonathan (Jonny) Johannes 
       .grid_3.alpha
-        = image_tag "/images/profile.jpg"
+        = image_tag "/images/profile.jpg", :width => "220px"
       
       .grid_5.omega
         %p 
