--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -3,7 +3,7 @@
 
 .grid_9
   .canvas
-    .blog_content
+    .canvas_content
       %h1
         = yield(:title)
         = link_to image_tag("/images/rss-shadow.png"), posts_path(:atom), :id => "rss_icon"
