--- a/public/stylesheets/verivore.css
+++ b/public/stylesheets/verivore.css
@@ -79,13 +79,12 @@ p {
   -webkit-border-top-right-radius: 5px 5px;
 }
 
-.blog_content {
-  width: 640px;
+.canvas_content {
   margin: 20px auto 0px;
-  padding: 10px 0;
+  padding: 10px 30px;
 }
 
-.blog_content h1 {
+.canvas_content h1 {
   font-size: 35px;
   font-style: none;
   margin-bottom: 10px;
@@ -124,7 +123,7 @@ p {
 }
 
 #food_search input{
-  margin-top: 5px;
+  margin-bottom: 20px;
   font-size: 14px;
   width: 140px;
 }
