bah, text mate's search and replace doesn't save the changes, guess that makes sense

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,7 +2,7 @@
 
 .grid_9
   .canvas
-    .blog_content
+    .canvas_content
       = render :partial => @post
       %p= link_to '<< Back to all posts', posts_path
   
