--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -2,7 +2,7 @@
 
 .grid_9
   .canvas{:style => "height: 360px; margin-bottom: 20px;"}
-    .blog_content
+    .canvas_content
       %h1= yield(:title)
       
       %h2{:style => "margin-bottom: 20px;"} Jonathan (Jonny) Johannes 
