change about info

--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -13,7 +13,7 @@
         %p 
           Your friendly neighbourhood lover of tech, food and physics. 
           %em 
-            Smart Guy Who Gets Things Done at #{link_to "@foodtree", "http://twitter/foodtree"}.
+            Data Wrangler and Scientist at #{link_to "@foodtree", "http://twitter/foodtree"}.
 
 .grid_3.sidebar
   = render "shared/contact"
