git ignore update to ignore all rvmrc and fix busted gallery

--- a/app/views/static/gallery.html.haml
+++ b/app/views/static/gallery.html.haml
@@ -8,13 +8,13 @@
     .canvas_content
       %h1= yield(:title)
       
-      %h2 Random Food
+      %h2 Great Wall of China - Badaling (February 2012)
       #gallery
         :javascript
           $(document).ready(function() {
             $('#gallery').fancyPhotoset({
               apiKey: '067155c46c55e47ef0544d70de0a8e29', 
-              photosetId: '72157626385437731'
+              photosetId: '72157629252214412'
             });
           });
       
